finalizando referencial teorico

--- a/template-tcc1/bibliografia.bib
+++ b/template-tcc1/bibliografia.bib
@@ -335,7 +335,40 @@ author = {A. C. Guyton and J. E. Hall},
 title = {Tratado de Fisiologia médica},
 year = {2012},
 publisher = {Elservier},
-address = {Rio de Janeiro},
+address = {Rio de Janeiro}, 
+}
+@article{mauricio,
+	Author = {M. Serrano},
+	Title = {Um Sistema de Recomendação Para Mídias Baseado em Conteúdo Nebuloso},
+	Year = {2006},
+	Url = {https://repositorio.ufscar.br/bitstream/handle/ufscar/334/DissMS.pdf?sequence=1}
 }
 
+@article{paulson2003,
+	Author = {P. Paulson and A. Tzanavari},
+	Title = {Combining Collaborative and Content-Based Filtering Using
+Conceptual Graphs },
+	Year = {2003},
+	Url = {https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.14.1917&rep=rep1&type=pdf}
+}
 
+@article{son2017,
+	Author = {J. Son and S. B. Kim},
+	Title = {Content-based filtering for recommendation systems using multiattribute networks },
+	Year = {2017},
+	Url = {https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.14.1917&rep=rep1&type=pdf}
+}
+
+@article{breese2013,
+	Author = {J. S. Breese and D, Heckerman and C. Kadie },
+	Title = {Empirical Analysis of Predictive Algorithms for Collaborative Filtering },
+	Year = {2013},
+	Url = {https://arxiv.org/pdf/1301.7363.pdf}
+}
+
+@article{burke2002,
+	Author = {R. Burke },
+	Title = {Hybrid Recommender Systems: Survey and Experiments },
+	Year = {2002},
+	Url = {https://arxiv.org/pdf/1301.7363.pdf}
+}
