--- a/template-tcc1/editaveis/abreviaturas.tex
+++ b/template-tcc1/editaveis/abreviaturas.tex
@@ -4,4 +4,10 @@
   \item[FSH] Hormônio folículo estimulante
   \item[AC] Anticoncepcional
   \item[MEIS] \textit{Multifactor Emotional Intelligence Scale}
+  \item[TDPM] Transtorno disfórico pré menstrual 
+  \item[TCC] Trabalho de conclusão de curso
+  \item[TPM] Tensão pré-menstrual  
+  \item[SR] Sistema de recomendação
+  \item[FC] Filtragem colaborativa
+  \item[kNN] \textit{K Nearest Neighbors}
 \end{siglas}
