--- a/template-tcc1/editaveis/introducao.tex
+++ b/template-tcc1/editaveis/introducao.tex
@@ -1,6 +1,6 @@
 \chapter[Introdução]{Introdução}
 
-Neste capítulo, serão descritos a contextualização, apresentando brevemente o tema; a justificativa, apesentando os porquês da elaboração do trabalho; os objetivos geral e específicos e a organização dos capítulos do trabalho.ho.
+Neste capítulo, serão descritos a contextualização, apresentando brevemente o tema; a justificativa, apesentando os porquês da elaboração do trabalho; os objetivos geral e específicos e a organização dos capítulos do trabalho.
 
 \section{Contextualização}
 
@@ -75,7 +75,7 @@ Já nos aspectos emocionais e comportamentais, no estudo de \citeonline{rosa2016
 durante o período da semana que antecede a menstruação e no período da menstruação, as mulheres 
 entrevistadas relataram sentir uma maior alteração psicológica ou comportamental. Essas alterações 
 compreendem variações de humor, irritabilidade, ansiedade, entre outros. Essas alterações podem ser 
-classificadas como transtorno disfórico pré-menstrual (TPM) \cite{ACOG2000}.
+classificadas como transtorno disfórico pré-menstrual (TDPM) \cite{ACOG2000}.
 
 
 
