--- a/template-tcc1/editaveis/metodologia.tex
+++ b/template-tcc1/editaveis/metodologia.tex
@@ -1,8 +1,32 @@
 \chapter[Metodologia]{Metodologia}
 
 \section{Metodologia}
+
+\subsection{Classificação da Pesquisa}
+
+\subsubsection{Quanto à abordagem}
+
+\subsubsection{Quanto à Natureza}
+
+\subsubsection{Quanto aos Objetivos}
+
+\subsubsection{Quanto aos procedimentos}
+
+\subsection{Fluxo das Atividades}
+
+\subsubsection{Atividades de Desenvolvimento}
+
+\subsubsection{Pesquisa-ação}
+
+\subsubsection{Análise de Resultados}
+
+\subsection{Cronograma}
+
+\subsection{Resumo do Capítulo}
+
           
-Do ponto de vista dos procedimentos técnicos esta é uma pesquisa experimental que procura estabelecer uma relação entre as causas e os efeitos de um determinado fenômino. Este fenômeno seria, os efeitos do ciclo menstrual femino na performance individual das mulheres nas tarefas cotididanas.
+Do ponto de vista dos procedimentos técnicos esta é uma pesquisa 
+experimental que procura estabelecer uma relação entre as causas e os efeitos de um determinado fenômino. Este fenômeno seria, os efeitos do ciclo menstrual femino na performance individual das mulheres nas tarefas cotididanas.
 
 Esta pesquisa é de natureza aplicada por ter como objetivo final, gerar um aplicativo com sistema de recomendação baseado no perfil individual das mulheres e nas fases do ciclo menstrual femino. A forma de abordagem do problema qualitativa e quantitativa. Quanto a abordagem quantitativa, a pesquisa tem a finalidade de ser exploratória utilizando fontes bibliográficas como instrumento de conhecimento e base para afirmações. Quanto a abordagem qualitativa a finalidade da pesquisa se torna explicativa por procura identificar os fatores que contribuem ou determinam a ocorrência de fenômenose e explicar o porquê das coisas e suas causas(GIL, 2010).
 
