--- a/template-tcc1/editaveis/proposta.tex
+++ b/template-tcc1/editaveis/proposta.tex
@@ -1,2 +1,19 @@
 \chapter[Proposta]{Proposta}
 
+\section{Considerações Iniciais }
+
+\section{O Aplicativo }
+
+\subsection{Processo de Coleta de Dados}
+
+\subsection{Determinando que Fase do Ciclo o Usuário se Encontra}
+
+\subsection{Definição das Tarefas a Serem Recomendadas}
+
+\section{Prova de Conceito}
+
+\subsection{Prototipo de Alta Fidelidade}
+
+\subsection{Desenvolvimeno Inicial do Aplicativo}
+
+\section{Considerações Finais}
