--- a/template-tcc1/editaveis/referencialteorico.tex
+++ b/template-tcc1/editaveis/referencialteorico.tex
@@ -122,7 +122,7 @@ o ciclo.
 
 A fase lútea tem duração de 14 dias e costuma ser constante nas mulheres, 
 sem grande variação, mesmo que o tamanho do ciclo varie. É comum no final 
-da fase lútea o aparecimeno do transtorno disfórico pré-menstrual(TPM), 
+da fase lútea o aparecimeno do transtorno disfórico pré-menstrual(TDPM), 
 que também ifluência significativamente os aspectos emocionais e 
 comportamentais durante as fases do ciclo menstrual. Esse transtorno 
 será mais detalhado na sessão 2.2.3.1.
@@ -209,15 +209,6 @@ a partir do início do ciclo.
         \label{fig02}
 \end{figure}
 
-\subsection{Outros Fatores que Influenciam no Ciclo Menstrual}
-
-Existem alguns outros fatores que provocam mudanças no ciclo menstrual 
-natural da mulher. Nessa seção, são destacados os métodos 
-contraceptivos hormonais e distúrbios hormonais.
-
-\subsubsection{Métodos Contraceptivos}
-
-\subsubsection{Disturbios hormonais}
 
 \section{Sistema de Recomendação}
  
@@ -233,6 +224,7 @@ excesso, fornecendo recomendações personalizadas baseadas nas informações
 coletadas, equilibrando fatores como precisão, novidade, dispersão e 
 estabilidade\cite{bobadilla2013}.
 
+
 Os sistemas de recomendação são implementados e possuem literatura 
 para áreas de diferentes temas, como música, televisão, livros, 
 documentos, \emph{e-learning}, \emph{e-comerce}, aplicações em mercados, 
@@ -246,9 +238,8 @@ usuários (idade, nacionalidade e sexo), informações sociais
 (seguidores, postagens, seguidos), ou informações coletadas através da 
 internet das coisas(localização, gps, rfid, sinais de saúde em tempo 
 real e outras coisa). Essas informações podem ser adquiridas de maneira 
-explicita, por meio de classificações dos usuários, ou implicitamente 
+explícita, por meio de classificações dos usuários, ou implicitamente 
 \cite{bobadilla2013}.
-
 
 De acordo com \citeonline{bobadilla2013}, os sistemas de recomendação 
 acompanham a evolução da web. A evolução da web é constituída de três 
@@ -262,37 +253,302 @@ geração veio com a web 2.0 reunindo informações sociais. A terceira
 geração usa a web 3.0 através de informações fornecidas pelos dispositivos 
 integrados na internet(internet das coisas).
 
-
 Os primeiros sistemas de recomendação focavam em melhorar a precisão da 
-recomendação através da filtragem. A maioria dos metodos e algorítimos 
+recomendação através da filtragem. A maioria dos métodos e algoritmos 
 baseados em memória (ex. o KNN, método de agregação, decomposição do valor 
-singular, métodos baseados em difusão, entre outros), foi
+singular, métodos baseados em difusão, entre outros), foram
 desenvolvidos e melhorados nesse contexto. Na primeira fase, com a 
-abordagem híbriga utilizando a filtragem de conteúdo 
+abordagem híbrida utilizando a filtragem de conteúdo 
 colaborativo-demográfica e colaborativo, ocorreu a melhora na qualidade 
 das recomendações. Na segunda fase, algorítimos que incluiam informações 
 das redes sociais (ex. algoritmos de
 confiança, abordagens sociais adaptativas, análise de redes sociais, 
 entre outros) foram adaptados e 
-desenvolvidos. Atualmente, o algoritimos hibrídos incorporam informações 
-de localização em algoritmos de recomendações já existentes. 
+desenvolvidos. Atualmente, os algoritmos híbridos incorporam informações 
+de localização em algoritmos de recomendações já existentes \cite{bobadilla2013}. 
+
+Os SRs podem ser, basicamente, classificados em dois grupos: Sistemas de recomendação baseados	
+em conteúdo e os sistemas de recomendação colaborativos \cite{mauricio}. Os sistemas
+de recomendação baseado em conteúdo fazem recomendações baseadas em itens semelhantes
+a outros itens já escolhidos pelo usuário e por isso possuem a caracteristica de
+diferenciar os interesses do usuário e fazer recomendações mais individualizadas. Já os 
+sistemas de recomendação colaborativos fazem recomendações de itens baseado nos interesses 
+de outros usuários com perfil semelhante ao do usuário, esses sistemas costumam homogeneizar
+os interesses dos usuários, criando grupos com interesses semelhantes. Os algoritmos híbridos 
+utilizam das duas abordagens para fazer recomendações.
+
+
+
 
 \subsection{Fundamentos}
 
-\subsubsection{Filtragem baseada em conteúdo}
+De acordo com \citeonline{bobadilla2013}, o processo de geração das recomendações dos SRs é baseado 
+na combinação das seguintes considerações:
 
-\subsubsection{Filtragem demográfica}
 
-\subsubsection{Filtragem colaborativa}
+\begin{itemize}
 
-\subsubsection{Filtragem hybrida}
+	\item O tipo de dados disponíveis em seu banco de dados (classificações, informações de registro do usuário, recursos e conteúdo para itens que podem ser
+	classificados e relações sociais entre os usuários ).
 
-\subsubsection{O problema do começo frio}
+	\item O algoritmo de filtragem usado (baseado em conteúdo, colaborativa ou híbrida).
 
+	\item O modelo escolhido (baseado em memória ou baseado em modelo ).
+	
+	\item As técnicas empregadas ( abordagens probabilísticas, algoritmo de vizinhos mais próximos;
+	algoritmos bioinspirados, como redes neurais e genéticas; modelos difusos e entre outros.)
+	
+	\item  Nível de dispersão do banco de dados e escalabilidade desejada.
+
+	\item  Desempenho do sistema (consumo de tempo e memória).
+
+	\item  O objetivo buscado e,
+
+	\item A qualidade desejada dos resultados (novidade, cobertura e
+   precisão).
+
+\end{itemize}
+
+Além da classificação pelo tipo de algoritmo de filtragem já citado, os SRs também podem 
+ser classificados pelo modelo escolhido \cite{bobadilla2013}: baseado em memória e baseado em modelo. 
+Os métodos baseados em memória atuam apenas na matriz de avaliações do usuário para certos itens e utilizam de 
+classificações geradas anteriormente para um novo processamento, atualizando sempre os resultados. 
+Os métodos baseados em modelo usa as informações pré-existentes para criar um
+modelo que gera as recomendações. Esse método fica desatualizado com novas informações do usuário.
+
+A Tabela \ref{tab01} foi adaptada do trabalho de \citeonline{adomavicius2005} e apresenta os algoritmos mais utilizados, 
+divididos entre as abordagens de recomendação baseado em conteúdo, colaborativos e híbridos e nas técnicas 
+de recomendação baseada em heurística e em modelo. 
+
+\begin{table}[]
+	\centering
+	\caption{Algoritimos utilizados nas abordagens de recomendações}
+	\label{tab01}
+	\begin{tabular}{|c|c|c|}
+	\hline
+	\rowcolor[HTML]{C0C0C0} 
+	\cellcolor[HTML]{C0C0C0} \textbf{Abordagem} & \multicolumn{2}{c|}{\cellcolor[HTML]{C0C0C0} \textbf{Técnica de Recomendação}} \\ \cline{2-3} 
+	\rowcolor[HTML]{C0C0C0} \textbf{de Recomendação}
+	\multirow{-2}{*}{\cellcolor[HTML]{C0C0C0}} &  \textbf{Baseada em heurística} & \textbf{Baseada em modelo} \\ \hline
+	\textbf{Baseada em Conteúdo	}   & \begin{minipage} [t] {0.3\textwidth} \begin{itemize} \item TF-IDF (recuperação de informação) \item Clustering \end{itemize} \end{minipage} & \begin{minipage} [t] {0.3\textwidth} \begin{itemize} \item Classificador bayesiano \item Clustering \item Árvores de decisão \item Redes Neurais Artificiais \end{itemize} \end{minipage} \\ \hline
+	\rowcolor[HTML]{EFEFEF} 
+	\textbf{Filtragem Colaborativa}	& \begin{minipage} [t] {0.3\textwidth} \begin{itemize} \item "Vizinhos mais próximos" \item Clustering \item Teoria dos Grafos \end{itemize} \end{minipage} & \begin{minipage} [t] {0.3\textwidth} \begin{itemize} \item  Redes bayesianas \item Clustering \item Redes Neurais Artificiais \item Regressão Linear \item Modelos Probabilísticos \end{itemize} \end{minipage} \\ \hline
+	\textbf{Híbrida} &  \begin{minipage} [t] {0.3\textwidth} Combinando conteúdo e componentes colaborativos usando: \begin{itemize} \item Combinação linear de classificações previstas \item Esquemas variados de votação \item incorporação de um componente como parte da heurística para o outro \end{itemize}        \end{minipage} & \begin{minipage} [t] {0.3\textwidth} Combinando conteúdo e componentes colaborativos usando: \begin{itemize} \item incorporação de um componente como parte do modelo para o outro \item construção de um modelo unificado \end{itemize} \end{minipage} \\ \hline
+	\end{tabular}
+\end{table}
+
+Além das da abordagem de recomendação baseado em conteúdo e a colaborativa, \citeonline{burke2002} também cita mais três técnicas de recomendação: demográfica, baseada em utilidade e 
+baseado em conhecimento. De acordo com \citeonline{burke2002} os sistemas de recomendação tem: 
+
+\begin{itemize}
+
+	\item \emph{background data}, as informações que o sistema possui antes da recomendação;
+
+	\item dados de entrada, as informações que o usuário deve comunicar ao
+	sistema para gerar uma recomendação e,
+
+	\item um algoritmo que combina antecedentes e dados de entrada para chegar às suas sugestões
+
+\end{itemize}
+
+Na Tabela \ref{tab02}, adaptada do trabalho de \citeonline{burke2002}, os 5 tipos de recomendação tem o sistema de background, entrada e processo brevemente explicados 
+assumindo que, \textbf{I} é o conjunto de itens sobre os quais as recomendações são feitas, \textbf{U} é o conjunto de usuários cujas preferências são conhecidas, \textbf{u} 
+é o usuário para o qual as recomendações devem ser geradas e \textbf{i} é algum item para o qual gostaríamos de prever sua preferência.
+
+\begin{table}[]
+	\centering
+	\caption{\emph{Background}, entrada e processo utilizados nos Sistemas de Recomendação}
+	\label{tab02}
+	\begin{tabular}{|c|c|c|c|}
+	\hline
+	\rowcolor[HTML]{C0C0C0} 
+	\textbf{Técnicas} & \textbf{Background} & \textbf{Entrada}  &  \textbf{Processo}  \\ \hline
+	\textbf{Colaborativa} & \begin{minipage} [t] {0.2\textwidth} \centering Avaliações de \textbf{U} de itens em \textbf{I}  \end{minipage}  & \begin{minipage} [t] {0.2\textwidth} \centering Avaliações de \textbf{u} dos itens em \textbf{I} \end{minipage}  &  \begin{minipage} [t] {0.2\textwidth}  Identifique usuários em \textbf{U} semelhantes a \textbf{u} e extrapole a partir de suas classificações de \textbf{i}.   \end{minipage}    \\ \hline
+	\rowcolor[HTML]{EFEFEF} 
+	\textbf{Baseada em Conteúdo} & \begin{minipage} [t] {0.2\textwidth} \centering Características dos itens em \textbf{I}\end{minipage}  & \begin{minipage} [t] {0.2\textwidth} \textbf{u}'s avaliações dos itens em \textbf{I} \end{minipage}  &   \begin{minipage} [t] {0.2\textwidth} Gere um classificador de acordo com \textbf{u}'s comportamento de classificação e use-o em \textbf{i}. \end{minipage} \\ \hline
+	\textbf{Demográfica} & \begin{minipage} [t] {0.2\textwidth} \centering Informações demográficas sobre \textbf{U} e suas classificações de itens em \textbf{I}.    \end{minipage}   & \begin{minipage} [t] {0.2\textwidth} Informações demográficas sobre \textbf{u}. \end{minipage}  & \begin{minipage} [t] {0.2\textwidth} Identifique os usuários que são demograficamente semelhantes a \textbf{u} e extrapole a partir de suas classificações de \textbf{i}. \end{minipage}   \\ \hline
+	\rowcolor[HTML]{EFEFEF} 
+	\textbf{Baseado em utilidade} & \begin{minipage} [t] {0.2\textwidth} \centering Características dos itens em \textbf{I} \end{minipage}  & \begin{minipage} [t] {0.2\textwidth} 
+		Uma função de utilidade sobre os itens em \textbf{I} que descreve \textbf{u}'s preferências \end{minipage}   & \begin{minipage} [t] {0.2\textwidth} Aplique a função aos itens e determine a classificação de \textbf{i}.  \end{minipage}  \\ \hline
+	\textbf{Baseado em conhecimento}  & \begin{minipage} [t] {0.2\textwidth} \centering Características dos itens em \textbf{I}. Conhecimento de como esses itens atendem às necessidades do usuário.  \end{minipage}  & \begin{minipage} [t] {0.2\textwidth} Uma descrição das necessidades ou interesses de \textbf{u}.\end{minipage}  &  \begin{minipage} [t] {0.2\textwidth}  
+		Inferir uma correspondência entre a necessidade de \textbf{i} e \textbf{u}. \end{minipage} \\ \hline
+	\end{tabular}
+\end{table}
+
+
+
+Nas subseções seguintes serão abordadas algumas dos fundamentos mais específicos dos tipos de filtragens utilizadas nos Sistemas de recomendação.
+
+
+
+
+\subsubsection{Filtragem Baseada em Conteúdo}
+
+
+Os Sistemas de Recomendação Baseados em conteúdo, fazem recomendações baseadas nas escolhas passadas do usuário \cite{bobadilla2013}. 
+Eles realizam consultas e armazenam informações sobre os metadados dos itens que o usuário teve interesse ou não e realizam recomendações 
+com base nas informações armazenadas do usuário e de outros itens da base de dado \cite{mauricio}. A partir desta análise, uma semelhança pode ser
+estabelecida entre os objetos que um usuário comprou, visitou, ouviu, viu e classificou a outros objetos semelhantes, gerando assim novas recomendações. 
+
+Por exemplo, na recomendação de filmes, o sistema de recomendação baseado em conteúdo 
+tenta entender as semelhanças entre os filmes que o usuário classificou e, então, recomenda filmes 
+que tenham um alto grau de similaridade as preferências do usuário (atores, diretores, gênero, assuntos e entre outros) \cite{adomavicius2005}.
+
+Uma das limitações dessa técnica de filtragem é que itens novos não são explorados, só aqueles que são semelhantes 
+aos itens já no perfil do usuário, isso leva a uma superespecialização. Em alguns casos, isso pode ser tratado com a 
+injeção de aleatóriedade\cite{paulson2003}.
+
+
+Algumas das técnicas de aprendizado de máquina mais utilizadas incluem: árvore de decisão, \emph{K-means}, redes neurais e classificadores 
+bayesiano \cite{son2017}. Por exemplo, o conceito básico do classificador bayesiano visa determinar se um item é preferível examinando informações de 
+atributos. Essa técnica é usada para estimar a probabilidade de um item 
+pertencer a uma classe $Ci$. A previsão de classificação é calculada usando a 
+seguinte função de probabilidade
+\begin{equation}
+	P(C_{i}|X) = \coprod _{k=1}^{n} P(x_{k}|C_{i})
+\end{equation}
+onde cada instância de item $X$ é descrita por uma conjunção de valores de atributo de item $x1$, $x2$,… $xk$. 
+
+
+Esses sistemas de recomendação geralmente necessitam de alguma forma de \emph{feedback} do usuário e isto pode ser 
+um problema, pois os usuários tendem a achar essa tarefa tediosa e quanto menos avaliações, mais limitado 
+será o conjunto de possíveis recomendações, podendo influenciar negativamente o desempenho \cite{paulson2003}. 
+
+Em técnicas de aprendizado de máquina, o processo de \emph{feedback} é necessário para a aprendizagem e calibração 
+do algoritmo e requer constantes atualizações das preferências do usuário, conforme o usuário avalia os itens. Ou seja, 
+as preferências não permanecem estáticas \cite{paulson2003}. 
+
+
+
+\subsubsection{Filtragem Colaborativa}
+
+Os Sistemas de recomendação de filtragem colaborativa (FC) dispensam o uso de metadados \cite{mauricio}. 
+Em geral, apenas mantêm por quais itens um usuário já demonstrou interesse. O sistema constrói perfis de classificação 
+de seus usuários, localiza outros usuários com perfis de classificação 
+semelhantes e retorna itens que os usuários semelhantes classificaram 
+positivamente \cite{son2017}.
+
+Para prever os votos de usuário a partir de um banco de dados de votos do usuário e de uma amostra ou população de outros usuários
+, \citeonline{breese2013} propôs a seguinte média de votos do usuário, demonstrada na  Eq. \ref{eqn02} , em que a base de dados 
+consiste em um conjunto de votos $v_{i,j}$, correspondendo ao voto do usuário $i$ no item $j$. Se $I_{i}$ é o
+conjunto de itens nos quais o usuário votou, então pode-se definir o voto médio para o usuário $i$ como :
+
+\begin{equation}
+	\label{eqn02}
+\overline{v}_{i} = \frac{1}{\left | i \right |} \sum_{j\epsilon I_{i}}^{} v_{i,j}
+\end{equation}
+
+
+Para um sistema particular, a definição do termo \lq\lq semelhante\rq\rq\ é necessária para encontrar 
+os \lq\lq vizinhos mais próximos\rq\rq\ do usuário para fazer as recomendações. Este é um dos principais 
+pontos onde os sistemas colaborativos diferem. Especificar quais usuários devem ser considerados semelhantes determina o
+desempenho do sistema em termos de precisão das recomendações \cite{son2017}.
+
+O algoritmo mais utilizado para FC é o \emph{K Nearest Neighbors} (kNN), ou "vizinhos próximos". O kNN executa 
+os três passos seguintes para gerar recomendações: determinar os $k$ vizinhos mais próximos ao usuário, implementar 
+uma abordagem de agregação, com avaliações de itens avaliados pelos vizinhos, mas que não foram avaliados pelo usuário e 
+extrair as previsões da segunda etapa e selecionar as N primeiras recomendações \cite{bobadilla2013}. Correlação de Person, regressão linear, 
+similaridade vetorial, modelos probabilísticos, redes bayesianas e diferenças quadradas médias são outros algoritmos, também utilizados para processar a similaridade entre dois usuários \cite{paulson2003}.
+
+Os algoritmos colaborativos são divididos em algoritmos baseados em memória e algoritmos baseados em 
+modelo \cite{breese2013}. O algoritmo baseado em memória opera em todo o banco de dados do usuário para fazer 
+previsões. Já o algoritmo baseado em modelo, em contraste, utiliza do banco de dados do usuário 
+para estimar ou aprender um modelo, que é então usado para previsões.
+
+Uma das limitações dessa filtragem é que se um usuário que é considerado incomum com base em seus 
+interesses, provavelmente, não será semelhante a nenhum dos outros usuários,
+o que levará a recomendações ruins. Outra limitação, seria, uma vez que, nenhuma informação sobre o 
+conteúdo dos itens é mantidos, mesmo usuários com interesses semelhantes (mas não 
+idênticos) podem não serem considerados semelhantes \cite{son2017}.
+
+Como nas técnicas baseadas em conteúdo, esses sistemas dependem de seus usuários fornecerem classificações ou feedback. Para solucionar 
+esse problema, geralmente, são usados \emph{feedback} implícito ou métodos para aumentar 
+a densidade do conjunto de dados \cite{paulson2003}.
+
+Quando o número de usuários é pequeno, os SRs colaborativos tendem a não conseguir associar 
+os usuários a um grupo de usuários com interesses semelhantes. Porém quando o 
+número de usuários cresce, os SRs colaborativo geralmente geram recomendações muito mais 
+precisas \cite{mauricio}. 
+
+A vantagem dessa filtragem sobre as técnicas baseadas em conteúdo, é que a \lq\lq piscina\rq\rq  de itens a serem recomendados 
+não se restringem a itens que o usuário ativo demonstrou interesse \cite{paulson2003}, o que pode levar o usuário a experimentar novos tópicos e itens.
+
+
+\subsubsection{Filtragem Híbrida}
+
+Na filtragem híbrida, normalmente é utilizado da combinação da filtragem Colaborativa com a filtragem 
+baseada em conteúdo\cite{bobadilla2013}. A combinação de duas ou mais técnicas de recomendação tenta driblar as limitações de cada 
+técnica e permite explorar o que há de melhor nelas e obter um melhor desempenho \cite{burke2002}. 
+
+A filtragem hibrida é normalmente baseada em técnicas bioinspiradas ou modelos probabilísticos como, 
+algoritmos genéticos, genética difusa, redes neurais, redes Bayesianas, clustering e características latentes  \cite{bobadilla2013}.
+
+Além dos das duas técnicas já citada, faz necessário discorrer brevemente sobre as outras três técnicas: demográfica, baseada em utilidade e baseada em conhecimento, porque 
+elas também são utilizadas na filtragem híbrida.
+
+\subsubsubsection{Filtragem Demográfica}
+
+O sistema de recomendação demográfico, faz recomendações com base em classes demográficas \cite{burke2002}o
+como: faixa etária, sexo, nacionalidade, residência atual, estado civil, 
+alfabetização, ocupação e demais características econômicas e entre outros. É comum a utilização de pesquisas para 
+coletar os  dados do usuário para fazer uma categorização. O benefício da filtragem demográfica é que
+pode não exigir um histórico de avaliações do usuário, como é necessário no sistema baseado em conteudo e no colaborativo \cite{burke2002}.
+
+\subsubsubsection{Filtragem Baseada em Utilidade}
+
+A Filtragem baseada em utilidade não tenta construir generalização de longo prazo sobre seus usuários, mas sim basear suas recomendações 
+em avaliação da correspondência entre a necessidade de um usuário e o conjunto de itens.
+Esse sistema de recomendação, faz um cálculo baseado na utilidade do item para o usuário.
+Cada usuário deve ter uma função de utilidade específica e existem várias técnicas para chegar a essa função. Normalmente, é bastante utilizado no comércio eletrônico por sua capacidade de fatorar atributos não relacionados ao produto,como :
+confiabilidade do fornecedor e disponibilidade do produto. \cite{burke2002}.
+
+\subsubsubsection{Filtragem Baseada em Conhecimento}
+
+Assim como a recomendação baseada em utilidade, a recomendação baseada em conhecimento tenta sugerir objetos com base em inferências
+sobre as necessidades e preferências do usuário, mas ela se distingue por ter o conhecimento funcional sobre 
+como um determinado item atende a necessidade específica do usuário. Um exemplo seria 
+a Google que usa informações sobre os links entre páginas da web para inferir popularidade e valor oficial \cite{burke2002}.
+
+
+\subsubsection{O Problema Do Começo Frio}
+
+De acordo com \citeonline{bobadilla2013} o problema do começo frio ocorre quando não é possível fazer recomendações 
+confiáveis por falta de avaliações iniciais. Existem três tipos de problemas do começo frio: nova comunidade, novo item e novo usuário. 
+
+O problema da nova comunidade refere se a dificuldade em obter quantidade suficiente de avaliações para fazer as recomendações. É possível 
+resolver esse problema de duas maneiras: incentivar os usuários a fazer avaliações por diferentes meios; seguir recomendações baseadas em FC 
+quando houver usuários e classificações suficientes\citeonline{bobadilla2013}.
+
+O problema do novo item surge quando um item entra no sistema de recomendação sem avaliações iniciais. 
+Um item sem avaliação não seria recomendado a comunidade e não receberia avaliações, entrando em um ciclo vicioso. Uma forma 
+de resolver esse problema é motivar alguns usuários a serem responsáveis a avaliar novos itens do sistema\cite{burke2002}. 
+
+O problema do novo usuário é o mais desafiador de todos, já que novos usuários não tem nenhuma 
+avaliação no sistema de recomendação, eles não podem receber recomendações personalizadas\cite{burke2002}.As abordagens hibridas são normalmente utilizadas para resolver esse problema. 
+A estratégia comum para resolver o problema do novo usuário consiste de recorrer a informações adicionais para o conjunto de classificações\cite{bobadilla2013}.
 
 \section{Considerações Finais do Capítulo}
 
+Na tabela a seguir adaptada do trabalho de \citeonline{burke2002}, é possível observar o resumo dos pontos positivos e negativos das técnicas utilizadas no sistema de recomendação.
+A Filtragem Híbrida utiliza de duas ou mais dessas técnicas para tentar aproveitar o que há de melhor em cada uma e minimizar os pontos negativos.
 
+\begin{table}[]
+	\centering
+	\caption{Pontos positivos e negativos de cada Sistema de Recomendação}
+	\label{tab03}
+	\begin{tabular}{|c|c|c|}
+	\hline
+	\rowcolor[HTML]{C0C0C0} 
+	\textbf{Técnicas} & \textbf{Pontos positivos } & \textbf{Pontos negativos}  \\ \hline
+	\textbf{Colaborativa} & \begin{minipage} [t] {0.3\textwidth} \begin{itemize} \item 	A. Pode identificar nichos de gênero cruzado \item B. Conhecimento de domínio não necessário. \item C. Adaptável: a qualidade melhora com o tempo \item D. Feedback implícito suficiente \end{itemize} \end{minipage} & \begin{minipage} [t] {0.3\textwidth} \begin{itemize} \item	I. Problema de aumento de usuários novos \item J. Problema de aumento de item novo \item K. Problema de ‘ovelhas cinzentas’ \item L. Qualidade dependente de grande conjunto de dados históricos \item M. Problema de estabilidade vs. plasticidade\end{itemize} \end{minipage}  \\ \hline
+	\rowcolor[HTML]{EFEFEF} 
+	\textbf{Baseada em Conteúdo} & B, C, D & I, L, M \\ \hline
+	\textbf{Demográfica} & A, B, C  & \begin{minipage} [t] {0.3\textwidth} \begin{itemize} \item I, K, L, M \item N. Deve reunir informações demográficas\end{itemize} \end{minipage} \\ \hline
+	\rowcolor[HTML]{EFEFEF} 
+	\textbf{Baseado em utilidade}  & \begin{minipage} [t] {0.3\textwidth} \begin{itemize} \item  E. Não é necessário ramp-up \item F. Sensível a mudanças de preferência \item{G. Pode incluir recursos não relacionados ao produto}\end{itemize} \end{minipage} & \begin{minipage} [t] {0.3\textwidth} \begin{itemize} \item O. O usuário deve inserir a função de utilidade \item P. Capacidade de sugestão estática (não aprende)\end{itemize} \end{minipage} \\ \hline
+	\textbf{Baseado em conhecimento}  & \begin{minipage} [t] {0.3\textwidth} \begin{itemize} \item E, F, G \item H. Pode mapear desde as necessidades do usuário até os produtos\end{itemize} \end{minipage} & \begin{minipage} [t] {0.3\textwidth} \begin{itemize} \item P \item Q. Engenharia de conhecimento necessária.\end{itemize} \end{minipage} \\ \hline
+	\end{tabular}
+\end{table}
 
 
 %Na pesqusa realizada, ápos passar a menstruação, mulheres relataram sentir alterações de humor, comportamentais e sintomas físicos. Esses sintomas variam entre melhoras na pele e no cabelo, perca de peso, diminuição na sensação de inchaço, diminuição ou aumento na líbido, humor mais estável, autoestima elevada, sensação de liberdade, resistência a dor, aumento na confiança, animação, foco, inspiração e na comunicação.
